# test_qt

./: CMakeLists.txt  main.cpp
src/: Snake.pro  game.cpp  game.h  main.cpp
